rusty-cdk-macros/tests/fails/origin_path_trailing_slash.rs
use rusty_cdk_macros::origin_path;

fn main() {
    origin_path!("/trailing-slash/");
}
